package com.yyf.app.ch8;

/**
 * 运算方法接口
 */
public interface Operation {

    /**
     * 运算
     * @param numA
     * @param numB
     * @return
     */
    double gerResult(double numA, double numB);
}
